@@ -1,3 +1,12 @@
+2008-01-05  Pedro Alves  <pedro@codesourcery.com>
+
+	* main.c (captured_main): Remove 'count' varible and the
+	ALIGN_STACK_ON_ENTRY block that used it.  Error out if --core and
+	--pid options were issued simultaneously.  If an explicit pid
+	option was passed, don't fallback to core file.  Detect extra
+	arguments better in the presence of explicit pid or core
+	arguments.
+
 2008-01-05  Joel Brobecker  <brobecker@adacore.com>
 
 	* ada-lang.c (ada_which_variant_applies): Correctly compute
